<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_banner"
        android:title="@string/banner"
        android:icon="@drawable/ic_announcement_black"
        android:orderInCategory="5"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_info"
        android:title="@string/info"
        android:icon="@drawable/ic_info_black"
        android:orderInCategory="7"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh_black"
        android:orderInCategory="10"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_subject_selection"
        android:title="@string/subject_selection"
        android:orderInCategory="90"
        app:showAsAction="never" />
    <!--
            <item
                android:id="@+id/action_settings"
                android:title="@string/settings"
                android:orderInCategory="100"
                app:showAsAction="never" />
    -->
</menu>
